--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -2537,7 +2537,7 @@ body {
   color: #706c6c; }
 
 a {
-  color: blue;
+  color: #0000FF;
   font-size: 15px;
   font-family: "Open Sans", sans-serif;
   text-decoration: none;
@@ -2638,7 +2638,7 @@ ul {
       -ms-flex-align: center;
           align-items: center;
   margin-top: 25px;
-  border-bottom: 2px solid #ccc; }
+  border-bottom: 2px solid #4682B4; }
 
 .btn {
   display: inline-block;
@@ -2654,7 +2654,7 @@ ul {
   transition: 0.3s; }
 
 .btn-add {
-  background: saddlebrown; }
+  background: #4682B4; }
 
 .btn-add:hover {
   color: palegreen;
@@ -2662,7 +2662,7 @@ ul {
   }
 
 .btn-cancel {
-  background: saddlebrown; }
+  background: #4682B4; }
 
 .btn-cancel:hover {
   color: red;
@@ -2679,7 +2679,7 @@ ul {
   margin-top: 20px; }
 
 .t-head {
-  background:  wheat; }
+  background:  #87CEEB; }
 
 .t-body {
   background: white; }
@@ -2800,3 +2800,57 @@ ul {
 /* Small Devices, Tablets */
 /* Medium Devices, Desktops */
 /* Large Devices, Wide Screens */
+
+/* Style the header with a grey background and some padding */
+.header-cyan {
+  overflow: hidden;
+  background-color: #87CEEB;
+  padding: 15px 10px;
+}
+
+/* Style the header links */
+.header-cyan a {
+  float: left;
+  color: #00008B;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header-cyan a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+/* Change the background color on mouse-over */
+.header-cyan a:hover {
+  background-color: #4682B4;
+  color: #F0FFFF;
+}
+
+/* Style the active/current link*/
+.header-cyan a.active {
+  background-color: #4682B4;
+  color: white;
+}
+
+/* Float the link section to the right */
+.header-cyan-right {
+  float: right;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+  .header-cyan a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-cyan-right {
+    float: none;
+  }
+}
