fix bugs with positions, add path image in db, function save/update/delete images for resumes

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -12,7 +12,7 @@ button:hover{
     color: white;
 }
 
-input[type=text],[type=date]{
+input[type=text],[type=date],[type=file] {
     border: 1px solid #1ECBE6;
     border-radius: 10px;
 }
